syntax = "proto3";
package cel_sandbox;

option go_package = "github.com/suzuito/sandbox-go/cmd/002/pb";

service ViewStorageService {
    rpc ReadFile(RequestReadFile) returns (File) {}
}

message RequestReadFile {
    string name = 1;
    string org = 2;
    map<string, Permission> permissions = 3;
}

message Permission {
    repeated string buckets = 1;
}

message File {
    string path = 1;
    string content = 2;
}